--- a/Proyecto 3/index.html
+++ b/Proyecto 3/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
+    <script src="js/javascript.js" defer></script>
+
     <link rel="stylesheet" href="css/style.css">
+
     <title>Sliding puzzle</title>
 </head>
 
 <body>
     <div id="app"></div>
-
-    <script src="js/javascript.js"></script>
 </body>
 
 </html>
