--- a/Proyecto 3/index.html
+++ b/Proyecto 3/index.html
@@ -8,6 +8,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/javascript.js" defer></script>
 
     <link rel="stylesheet" href="css/style.css">
