--- a/Proyecto 6/index.html
+++ b/Proyecto 6/index.html
@@ -6,11 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/javascript.js"></script>
 </head>
 
 <body>
+    <input type="text" name="name" />
+    <input type="text" name="surname" />
+    <input type="text" name="dni" />
+    <input type="date" name="date" />
+    <input type="text" name="cp" />
+    <input type="email" name="mail" />
+    <input type="text" name="phone" />
+    <input type="text" name="mobile" />
+    <input type="text" name="card" />
+    <input type="text" name="iban" />
+    <input type="password" name="password" />
 </body>
 
 </html>
