--- a/Proyecto 6/index.html
+++ b/Proyecto 6/index.html
@@ -6,23 +6,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
+    <script src="js/javascript.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css" />
-    <script src="js/javascript.js"></script>
 </head>
 
 <body>
-    <input type="text" name="name" />
-    <input type="text" name="surname" />
-    <input type="text" name="dni" />
-    <input type="date" name="date" />
-    <input type="text" name="cp" />
-    <input type="email" name="mail" />
-    <input type="text" name="phone" />
-    <input type="text" name="mobile" />
-    <input type="text" name="card" />
-    <input type="text" name="iban" />
-    <input type="password" name="password" />
+    <div class="container">
+        <form>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="name">Name</label>
+                    <input class="form-control" type="text" name="name" id="name" />
+                </div>
+                <div class="form-group col">
+                    <label for="surname">Surname</label>
+                    <input class="form-control" type="text" name="surname" id="surname" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="dni">Dni</label>
+                    <input class="form-control" type="text" name="dni" id="dni" />
+                </div>
+                <div class="form-group col">
+                    <label for="date">Date of birth</label>
+                    <input class="form-control" type="text" name="date" id="date" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="cp">Postal Code</label>
+                    <input class="form-control" type="text" name="cp" id="cp" />
+                </div>
+                <div class="form-group col">
+                    <label for="mail">Mail</label>
+                    <input class="form-control" type="email" name="mail" id="mail" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="phone">Phone</label>
+                    <input class="form-control" type="text" name="phone" id="phone" />
+                </div>
+                <div class="form-group col">
+                    <label for="mobile">Mobile</label>
+                    <input class="form-control" type="text" name="mobile" id="mobile" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="card">Credit card</label>
+                    <input class="form-control" type="text" name="card" id="card" />
+                </div>
+                <div class="form-group col">
+                    <label for="iban">Iban</label>
+                    <input class="form-control" type="text" name="iban" id="iban" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <label for="password">Password</label>
+                    <input class="form-control" type="password" name="password" id="password" />
+                </div>
+                <div class="form-group col">
+                    <label for="repeatPassword">Repeat password</label>
+                    <input class="form-control" type="password" name="repeatPassword" id="repeatPassword" />
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="form-group col">
+                    <button type="button" name="setStorage" id="setStorage"
+                        class="form-control btn mt-3 btn-outline-primary btn-lg btn-block">Save</button>
+                </div>
+                <div class="form-group col">
+                    <button type="button" name="getStorage" id="getStorage"
+                        class="form-control btn mt-3 btn-outline-primary btn-lg btn-block">Retrieve</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <button type="button" name="postHttp" id="postHttp"
+                        class="form-control btn mt-3 btn-outline-success btn-lg btn-block">Post</button>
+                </div>
+                <div class="form-group col">
+                    <button type="button" name="getHttp" id="getHttp"
+                        class="form-control btn mt-3 btn-outline-success btn-lg btn-block">Get</button>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
