--- a/Proyecto 4/index.html
+++ b/Proyecto 4/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
-    <script src="js/jquery.js" defer></script>
+    <script src="js/javascript.js" defer></script>
 </head>
 
 <body>
