--- a/Proyecto 4/index.html
+++ b/Proyecto 4/index.html
@@ -17,6 +17,7 @@
     <div id="devices">
 
         <div class="imac" id="screen">
+            <textarea class="text"></textarea>
         </div>
         <div id="keyboard">
             <ul>
@@ -36,64 +37,64 @@
                 <li><a href="#" class="key fn"><span>Eject</span></a></li>
             </ul>
             <ul id="numbers">
-                <li><a href="#" class="key c220"><b>ª</b><span>º</span></a></li>
-                <li><a href="#" class="key c49"><b>!</b><span>1</span></a></li>
-                <li><a href="#" class="key c50"><b>@</b><span>2</span></a></li>
-                <li><a href="#" class="key c51"><b>#</b><span>3</span></a></li>
-                <li><a href="#" class="key c52"><b>$</b><span>4</span></a></li>
-                <li><a href="#" class="key c53"><b>%</b><span>5</span></a></li>
-                <li><a href="#" class="key c54"><b>&amp;</b><span>6</span></a></li>
-                <li><a href="#" class="key c55"><b>/</b><span>7</span></a></li>
-                <li><a href="#" class="key c56"><b>(</b><span>8</span></a></li>
-                <li><a href="#" class="key c57"><b>)</b><span>9</span></a></li>
-                <li><a href="#" class="key c48"><b>=</b><span>0</span></a></li>
-                <li><a href="#" class="key c219 alt"><b>?</b><span>'</span></a></li>
-                <li><a href="#" class="key c221"><b>¿</b><span>¡</span></a></li>
+                <li><a href="#" class="key c220 threeLetters twoDown"><b class="secondary">ª</b><span class="primary">º</span><span class="tertiary">\</span></a></li>
+                <li><a href="#" class="key c49 threeLetters twoUp"><b class="secondary">!</b><b class="tertiary">|</b><span class="primary">1</span></a></li>
+                <li><a href="#" class="key c50 threeLetters twoUp"><b class="secondary">"</b><b class="tertiary">@</b><span class="primary">2</span></a></li>
+                <li><a href="#" class="key c51 threeLetters twoUp"><b class="secondary">·</b><b class="tertiary">#</b><span class="primary">3</span></a></li>
+                <li><a href="#" class="key c52"><b class="secondary">$</b><span class="primary">4</span></a></li>
+                <li><a href="#" class="key c53"><b class="secondary">%</b><span class="primary">5</span></a></li>
+                <li><a href="#" class="key c54 threeLetters twoUp"><b class="secondary">&amp;</b><b class="tertiary">¬</b><span class="primary">6</span></a></li>
+                <li><a href="#" class="key c55"><b class="secondary">/</b><span class="primary">7</span></a></li>
+                <li><a href="#" class="key c56"><b class="secondary">(</b><span class="primary">8</span></a></li>
+                <li><a href="#" class="key c57"><b class="secondary">)</b><span class="primary">9</span></a></li>
+                <li><a href="#" class="key c48"><b class="secondary">=</b><span class="primary">0</span></a></li>
+                <li><a href="#" class="key c219 alt"><b class="secondary">?</b><span class="primary">'</span></a></li>
+                <li><a href="#" class="key c221"><b class="secondary">¿</b><span class="primary">¡</span></a></li>
                 <li><a href="#" class="key c8" id="delete"><span>Delete</span></a></li>
             </ul>
             <ul id="qwerty">
                 <li><a href="#" class="key c9" id="tab"><span>tab</span></a></li>
-                <li><a href="#" class="key c81"><span>q</span></a></li>
-                <li><a href="#" class="key c87"><span>w</span></a></li>
-                <li><a href="#" class="key c69"><span>e</span></a></li>
-                <li><a href="#" class="key c82"><span>r</span></a></li>
-                <li><a href="#" class="key c84"><span>t</span></a></li>
-                <li><a href="#" class="key c89"><span>y</span></a></li>
-                <li><a href="#" class="key c85"><span>u</span></a></li>
-                <li><a href="#" class="key c73"><span>i</span></a></li>
-                <li><a href="#" class="key c79"><span>o</span></a></li>
-                <li><a href="#" class="key c80"><span>p</span></a></li>
-                <li><a href="#" class="key c186 alt"><b>^</b><span>`</span></a></li>
-                <li><a href="#" class="key c187 alt"><b>*</b><span>+</span></a></li>
-                <li><a href="#" class="key c191 alt"><b>Ç</b><span>}</span></a></li>
+                <li><a href="#" class="key c81"><span class="primary">q</span></a></li>
+                <li><a href="#" class="key c87"><span class="primary">w</span></a></li>
+                <li><a href="#" class="key c69"><span class="primary">e</span></a></li>
+                <li><a href="#" class="key c82"><span class="primary">r</span></a></li>
+                <li><a href="#" class="key c84"><span class="primary">t</span></a></li>
+                <li><a href="#" class="key c89"><span class="primary">y</span></a></li>
+                <li><a href="#" class="key c85"><span class="primary">u</span></a></li>
+                <li><a href="#" class="key c73"><span class="primary">i</span></a></li>
+                <li><a href="#" class="key c79"><span class="primary">o</span></a></li>
+                <li><a href="#" class="key c80"><span class="primary">p</span></a></li>
+                <li><a href="#" class="key c186 alt threeLetters twoDown"><b class="secondary">^</b><span class="primary">`</span><span class="tertiary">[</span></a></li>
+                <li><a href="#" class="key c187 alt threeLetters twoDown"><b class="secondary">*</b><span class="primary">+</span><span class="tertiary">]</span></a></li>
+                <li><a href="#" class="key c191 alt"><b class="primary">Ç</b><span class="tertiary">}</span></a></li>
             </ul>
             <ul id="asdfg">
                 <li><a href="#" class="key c20 alt" id="caps"><b></b><span>caps lock</span></a></li>
-                <li><a href="#" class="key c65"><span>a</span></a></li>
-                <li><a href="#" class="key c83"><span>s</span></a></li>
-                <li><a href="#" class="key c68"><span>d</span></a></li>
-                <li><a href="#" class="key c70"><span>f</span></a></li>
-                <li><a href="#" class="key c71"><span>g</span></a></li>
-                <li><a href="#" class="key c72"><span>h</span></a></li>
-                <li><a href="#" class="key c74"><span>j</span></a></li>
-                <li><a href="#" class="key c75"><span>k</span></a></li>
-                <li><a href="#" class="key c76"><span>l</span></a></li>
-                <li><a href="#" class="key c192"><span>ñ</span></a></li>
-                <li><a href="#" class="key c222 alt"><b>¨</b><span>´</span></a></li>
+                <li><a href="#" class="key c65"><span class="primary">a</span></a></li>
+                <li><a href="#" class="key c83"><span class="primary">s</span></a></li>
+                <li><a href="#" class="key c68"><span class="primary">d</span></a></li>
+                <li><a href="#" class="key c70"><span class="primary">f</span></a></li>
+                <li><a href="#" class="key c71"><span class="primary">g</span></a></li>
+                <li><a href="#" class="key c72"><span class="primary">h</span></a></li>
+                <li><a href="#" class="key c74"><span class="primary">j</span></a></li>
+                <li><a href="#" class="key c75"><span class="primary">k</span></a></li>
+                <li><a href="#" class="key c76"><span class="primary">l</span></a></li>
+                <li><a href="#" class="key c192"><span class="primary">ñ</span></a></li>
+                <li><a href="#" class="key c222 alt threeLetters twoDown"><b class="secondary">¨</b><span class="primary">´</span><span class="tertiary">{</span></a></li>
                 <li><a href="#" class="key c13 alt" id="enter"><span>enter</span></a></li>
             </ul>
             <ul id="zxcvb">
                 <li><a href="#" class="key c16 shiftleft"><span>Shift</span></a></li>
-                <li><a href="#" class="key c90"><span>z</span></a></li>
-                <li><a href="#" class="key c88"><span>x</span></a></li>
-                <li><a href="#" class="key c67"><span>c</span></a></li>
-                <li><a href="#" class="key c86"><span>v</span></a></li>
-                <li><a href="#" class="key c66"><span>b</span></a></li>
-                <li><a href="#" class="key c78"><span>n</span></a></li>
-                <li><a href="#" class="key c77"><span>m</span></a></li>
-                <li><a href="#" class="key c188 alt"><b>;</b><span>,</span></a></li>
-                <li><a href="#" class="key c190 alt"><b>:</b><span>.</span></a></li>
-                <li><a href="#" class="key c189 alt"><b>_</b><span>-</span></a></li>
+                <li><a href="#" class="key c90"><span class="primary">z</span></a></li>
+                <li><a href="#" class="key c88"><span class="primary">x</span></a></li>
+                <li><a href="#" class="key c67"><span class="primary">c</span></a></li>
+                <li><a href="#" class="key c86"><span class="primary">v</span></a></li>
+                <li><a href="#" class="key c66"><span class="primary">b</span></a></li>
+                <li><a href="#" class="key c78"><span class="primary">n</span></a></li>
+                <li><a href="#" class="key c77"><span class="primary">m</span></a></li>
+                <li><a href="#" class="key c188 alt"><b class="secondary">;</b><span class="primary">,</span></a></li>
+                <li><a href="#" class="key c190 alt"><b class="secondary">:</b><span class="primary">.</span></a></li>
+                <li><a href="#" class="key c189 alt"><b class="secondary">_</b><span class="primary">-</span></a></li>
                 <li><a href="#" class="key c16 shiftright"><span>Shift</span></a></li>
             </ul>
             <ul id="bottomrow">
