--- a/Proyecto 3/index.html
+++ b/Proyecto 3/index.html
@@ -2,22 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+        crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="js/javascript.js" defer></script>
-
-    <link rel="stylesheet" href="css/style.css">
-
-    <title>Sliding puzzle</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <div id="app"></div>
 </body>
+
+<div class="container">
+    <div id="films">
+        <div>
+            <a href="html/movie1.html">
+                <img src="img/1.jpg" alt="">
+                <div>A silence voice</div>
+            </a>
+        </div>
+        <div>
+            <a href="html/movie2.html">
+                <img src="img/2.jpg" alt="">
+                <div>Your Name</div>
+            </a>
+        </div>
+        <div>
+            <a href="html/movie3.html">
+                <img src="img/3.jpg" alt="">
+                <div>Spirited Away</div>
+            </a>
+        </div>
+    </div>
+</div>
 
 </html>
