--- a/Proyecto 9/Proyecto 4/index.html
+++ b/Proyecto 9/Proyecto 4/index.html
@@ -8,7 +8,7 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous" defer></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/sweetalert.js"></script>
     <script src="js/jquery.js" defer></script>
 
     <link rel="stylesheet" href="css/style.css">
