--- a/Proyecto 10/index.html
+++ b/Proyecto 10/index.html
@@ -10,15 +10,19 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
+    <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <script defer src="js/index.js"></script>
     <script defer src="js/carousel.js"></script>
 
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/fontawesome.min.css" />
+
     <link rel="stylesheet" href="css/style.css">
+
     <title>Shop</title>
 </head>
 
@@ -90,7 +94,7 @@
                         </div>
                         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-2">
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Products
+                                Links
                             </h6>
                             <div>
                                 <a href="/" class="btn btn-link text-reset shadow-none">Products</a>
