--- a/Proyecto 10/html/contact.html
+++ b/Proyecto 10/html/contact.html
@@ -12,8 +12,9 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
-    <script defer src="../js/contact.js"></script>
-    <script defer src="../js/carousel.js"></script>
+    <script defer src="/js/session.js"></script>
+    <script defer src="/js/contact.js"></script>
+    <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -21,7 +22,7 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/fontawesome.min.css" />
 
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
     <title>Shop</title>
 </head>
@@ -40,17 +41,17 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="/" class="active shadow-none btn nav-link">Products</a>
+                            <a href="/" class="shadow-none btn nav-link">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a href="/html/contact.html" class="shadow-none btn nav-link">Contact</a>
+                            <a href="/html/contact.html" class="active shadow-none btn nav-link">Contact</a>
                         </li>
                         <li class="nav-item">
                             <a href="/html/about.html" class="shadow-none btn nav-link">About</a>
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <button class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></button>
+                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
                         <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
                     </div>
                 </div>
