--- a/Proyecto 10/index.html
+++ b/Proyecto 10/index.html
@@ -12,6 +12,7 @@
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
     <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
+    <script defer src="/js/session.js"></script>
     <script defer src="js/index.js"></script>
     <script defer src="js/carousel.js"></script>
 
@@ -50,7 +51,7 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <button class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></button>
+                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
                         <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
                     </div>
                 </div>
