añadido html  form para validaciones

--- a/Proyecto 10/html/login.html
+++ b/Proyecto 10/html/login.html
@@ -71,18 +71,20 @@
                     <h3 class="h3">Login</h3>
                     <div class="loginbox bg-white pt-2">
                         <i class="bi bi-person-fill"></i>
-                        <div class="loginbox-textbox">
-                            <input type="email" class="form-control" id="email" placeholder="Email" required>
-                        </div>
-                        <div class="loginbox-textbox">
-                            <input type="password" class="form-control" id="password" placeholder="Password" required>
-                        </div>
-                        <div class="loginbox-submit">
-                            <input type="button" class="btn btn-primary btn-block" id="formButton" value="Login">
-                        </div>
-                        <div class="loginbox-register">
-                            <a href="register.html" class="btn btn-link text-reset shadow-none">Register</a>
-                        </div>
+                        <form>
+                            <div class="loginbox-textbox">
+                                <input type="email" class="form-control" id="email" placeholder="Email" required>
+                            </div>
+                            <div class="loginbox-textbox">
+                                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                            </div>
+                            <div class="loginbox-submit">
+                                <input type="submit" class="btn btn-primary btn-block" id="formButton" value="Login">
+                            </div>
+                            <div class="loginbox-register">
+                                <a href="register.html" class="btn btn-link text-reset shadow-none">Register</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </main>
