--- a/Proyecto 10/html/register.html
+++ b/Proyecto 10/html/register.html
@@ -71,25 +71,27 @@
                     <h3 class="h3">Register</h3>
                     <div class="loginbox bg-white pt-2">
                         <i class="bi bi-person-fill"></i>
-                        <div class="loginbox-textbox">
-                            <input type="text" id="name" class="form-control" placeholder="Name">
-                        </div>
-                        <div class="loginbox-textbox">
-                            <input type="email" id="email" class="form-control" placeholder="Email">
-                        </div>
-                        <div class="loginbox-textbox">
-                            <input type="password" id="password" class="form-control" placeholder="Password">
-                        </div>
-                        <div class="loginbox-textbox">
-                            <input type="password" id="repeatPassword" class="form-control"
-                                placeholder="Repeat Password">
-                        </div>
-                        <div class="loginbox-submit">
-                            <input type="button" class="btn btn-primary btn-block" id="formButton" value="Register">
-                        </div>
-                        <div class="loginbox-register">
-                            <a href="/html/login.html" class="btn btn-link text-reset shadow-none">Login</a>
-                        </div>
+                        <form>
+                            <div class="loginbox-textbox">
+                                <input type="text" id="name" class="form-control" placeholder="Name">
+                            </div>
+                            <div class="loginbox-textbox">
+                                <input type="email" id="email" class="form-control" placeholder="Email">
+                            </div>
+                            <div class="loginbox-textbox">
+                                <input type="password" id="password" class="form-control" placeholder="Password">
+                            </div>
+                            <div class="loginbox-textbox">
+                                <input type="password" id="repeatPassword" class="form-control"
+                                    placeholder="Repeat Password">
+                            </div>
+                            <div class="loginbox-submit">
+                                <input type="button" class="btn btn-primary btn-block" id="formButton" value="Register">
+                            </div>
+                            <div class="loginbox-register">
+                                <a href="/html/login.html" class="btn btn-link text-reset shadow-none">Login</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </main>
