--- a/Proyecto 10/html/login.html
+++ b/Proyecto 10/html/login.html
@@ -10,13 +10,12 @@
     <script defer src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
-    <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script defer src="/js/sweetalert.js"></script>
 
     <script defer src="/js/session.js"></script>
     <script defer src="/js/login.js"></script>
     <script defer src="/js/carousel.js"></script>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet"
@@ -76,10 +75,11 @@
                                 <input type="email" class="form-control" id="email" placeholder="Email" required>
                             </div>
                             <div class="loginbox-textbox">
-                                <input type="password" class="form-control" id="password" placeholder="Password" required>
+                                <input type="password" class="form-control" id="password" placeholder="Password"
+                                    required>
                             </div>
                             <div class="loginbox-submit">
-                                <input type="submit" class="btn btn-primary btn-block" id="formButton" value="Login">
+                                <input type="submit" class="btn btn-primary btn-block" value="Login">
                             </div>
                             <div class="loginbox-register">
                                 <a href="register.html" class="btn btn-link text-reset shadow-none">Register</a>
