--- a/Proyecto 10/html/product.html
+++ b/Proyecto 10/html/product.html
@@ -13,7 +13,7 @@
     <script defer src="/js/sweetalert.js"></script>
 
     <script defer src="/js/session.js"></script>
-    <script defer src="/js/register.js"></script>
+    <script defer src="/js/product.js"></script>
     <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -66,31 +66,47 @@
             </div>
             <!-- MAIN -->
             <main class="p-5 mb-4">
-                <div class="login-container animated fadeInDown bootstrap snippets bootdeys">
-                    <h3 class="h3">Register</h3>
-                    <div class="loginbox bg-white pt-2">
-                        <i class="bi bi-person-fill"></i>
-                        <form>
-                            <div class="loginbox-textbox">
-                                <input type="text" id="name" class="form-control" placeholder="Name">
+                <div class="product-card card">
+                    <div class="card-body">
+                        <h3 class="card-title">Rounded Chair 153€</h3>
+                        <h6 class="card-subtitle">globe type chair for rest</h6>
+                        <div class="row">
+                            <div class="col-lg-5 col-md-5 col-sm-6">
+                                <div class="white-box text-center"><img
+                                        src="https://via.placeholder.com/430x600/00CED1/000000" class="img-responsive">
+                                </div>
                             </div>
-                            <div class="loginbox-textbox">
-                                <input type="email" id="email" class="form-control" placeholder="Email">
+                            <div class="col-lg-7 col-md-7 col-sm-6">
+                                <h4 class="box-title mt-5">Product description</h4>
+                                <p>Lorem Ipsum available,but the majority have suffered alteration in some form,by
+                                    injected humour,or randomised words which don't look even slightly believable.but
+                                    the majority have suffered alteration in some form,by injected humour</p>
+                                <button class="btn btn-dark btn-rounded mr-1" data-toggle="tooltip" title=""
+                                    data-original-title="Add to cart">
+                                    <i class="fa fa-shopping-cart"></i>
+                                </button>
+                                <h3 class="box-title mt-5">Key Highlights</h3>
+                                <ul class="list-unstyled">
+                                    <li><i class="fa fa-check text-success"></i>Sturdy structure</li>
+                                    <li><i class="fa fa-check text-success"></i>Designed to foster easy portability</li>
+                                    <li><i class="fa fa-check text-success"></i>Perfect furniture to flaunt your
+                                        wonderful collectibles</li>
+                                </ul>
                             </div>
-                            <div class="loginbox-textbox">
-                                <input type="password" id="password" class="form-control" placeholder="Password">
+                            <div class="col-lg-12 col-md-12 col-sm-12">
+                                <h3 class="box-title mt-5">General Info</h3>
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-product">
+                                        <tbody>
+                                            <tr>
+                                                <td width="390">Brand</td>
+                                                <td>Stellar</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
-                            <div class="loginbox-textbox">
-                                <input type="password" id="repeatPassword" class="form-control"
-                                    placeholder="Repeat Password">
-                            </div>
-                            <div class="loginbox-submit">
-                                <input type="submit" class="btn btn-primary btn-block" value="Register">
-                            </div>
-                            <div class="loginbox-register">
-                                <a href="/html/login.html" class="btn btn-link text-reset shadow-none">Login</a>
-                            </div>
-                        </form>
+                        </div>
                     </div>
                 </div>
             </main>
