--- a/Proyecto 10/html/about.html
+++ b/Proyecto 10/html/about.html
@@ -13,7 +13,6 @@
     <script defer src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
     <script defer src="/js/session.js"></script>
-    <script defer src="/js/contact.js"></script>
     <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -31,7 +30,7 @@
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a href="/" class="btn navbar-brand shadow-none">Project 10</a>
+                <a href="/" class="btn navbar-brand shadow-none"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Illuminati_triangle_eye.png" > illuminati Merlin</img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +49,8 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
-                        <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
+                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
+                        <a href="/html/cart.html" class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></a>
                     </div>
                 </div>
             </div>
