--- a/Proyecto 10/html/cart.html
+++ b/Proyecto 10/html/cart.html
@@ -13,7 +13,7 @@
     <script defer src="/js/sweetalert.js"></script>
 
     <script defer src="/js/session.js"></script>
-    <script defer src="/js/login.js"></script>
+    <script defer src="/js/cart.js"></script>
     <script defer src="/js/carousel.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a href="/" class="btn navbar-brand shadow-none">Project 10</a>
+                <a href="/" class="btn navbar-brand shadow-none"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Illuminati_triangle_eye.png" > illuminati Merlin</img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,8 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
-                        <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
+                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
+                        <a href="/html/cart.html" class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></a>
                     </div>
                 </div>
             </div>
@@ -83,46 +83,7 @@
                                                     <th scope="col" class="text-right">Total</th>
                                                 </tr>
                                             </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td><a href="#" class="text-danger"><i
-                                                                class="ri-delete-bin-3-line"></i></a></td>
-                                                    <td>Apple Watch</td>
-                                                    <td>
-                                                        <div class="form-group mb-0">
-                                                            <input type="number" class="form-control cart-qty"
-                                                                name="cartQty1" id="cartQty1" value="1">
-                                                        </div>
-                                                    </td>
-                                                    <td>$10</td>
-                                                    <td class="text-right">$500</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="#" class="text-danger"><i
-                                                                class="ri-delete-bin-3-line"></i></a></td>
-                                                    <td>Apple iPhone</td>
-                                                    <td>
-                                                        <div class="form-group mb-0">
-                                                            <input type="number" class="form-control cart-qty"
-                                                                name="cartQty2" id="cartQty2" value="1">
-                                                        </div>
-                                                    </td>
-                                                    <td>$20</td>
-                                                    <td class="text-right">$200</td>
-                                                </tr>
-                                                <tr>
-                                                    <td><a href="#" class="text-danger"><i
-                                                                class="ri-delete-bin-3-line"></i></a></td>
-                                                    <td>Apple iPad</td>
-                                                    <td>
-                                                        <div class="form-group mb-0">
-                                                            <input type="number" class="form-control cart-qty"
-                                                                name="cartQty3" id="cartQty3" value="1">
-                                                        </div>
-                                                    </td>
-                                                    <td>$30</td>
-                                                    <td class="text-right">$300</td>
-                                                </tr>
+                                            <tbody class="cart-list">
                                             </tbody>
                                         </table>
                                     </div>
@@ -135,24 +96,12 @@
                                             <div class="order-total table-responsive ">
                                                 <table class="table table-borderless text-right">
                                                     <tbody>
-                                                        <!-- <tr>
-                                                            <td>Sub Total :</td>
-                                                            <td>$1000.00</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Shipping :</td>
-                                                            <td>$0.00</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>Tax(18%) :</td>
-                                                            <td>$180.00</td>
-                                                        </tr> -->
                                                         <tr>
                                                             <td class="f-w-7 font-18">
-                                                                <h4>Amount :</h4>
+                                                                <h4>Total Amount :</h4>
                                                             </td>
                                                             <td class="f-w-7 font-18">
-                                                                <h4>$1180.00</h4>
+                                                                <h4 class="totalAmount">1180.00</h4>
                                                             </td>
                                                         </tr>
                                                     </tbody>
@@ -162,7 +111,7 @@
                                     </div>
                                 </div>
                                 <div class="cart-footer text-right">
-                                    <button class="btn btn-success my-1">Proceed to Checkout<i
+                                    <button type="submit" class="btn btn-success my-1">Proceed to Checkout<i
                                             class="ri-arrow-right-line ml-2"></i></button>
                                 </div>
                             </div>
