--- a/Proyecto 10/html/product.html
+++ b/Proyecto 10/html/product.html
@@ -31,7 +31,7 @@
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a href="/" class="btn navbar-brand shadow-none">Project 10</a>
+                <a href="/" class="btn navbar-brand shadow-none"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Illuminati_triangle_eye.png" > illuminati Merlin</img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,9 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
-                        <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
+                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i
+                                class="bi bi-person-fill"></i></a>
+                        <a href="/html/cart.html" class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></a>
                     </div>
                 </div>
             </div>
@@ -68,43 +69,26 @@
             <main class="p-5 mb-4">
                 <div class="product-card card">
                     <div class="card-body">
-                        <h3 class="card-title">Rounded Chair 153€</h3>
-                        <h6 class="card-subtitle">globe type chair for rest</h6>
+                        <h3 class="card-title"></h3>
                         <div class="row">
-                            <div class="col-lg-5 col-md-5 col-sm-6">
-                                <div class="white-box text-center"><img
-                                        src="https://via.placeholder.com/430x600/00CED1/000000" class="img-responsive">
+                            <div class="col-lg-5 col-md-5 col-sm-6 images">
+                                <div class="white-box text-center product-image">
+                                </div>
+                                <div class="text-center product-image out-of-stock">
                                 </div>
                             </div>
                             <div class="col-lg-7 col-md-7 col-sm-6">
                                 <h4 class="box-title mt-5">Product description</h4>
-                                <p>Lorem Ipsum available,but the majority have suffered alteration in some form,by
-                                    injected humour,or randomised words which don't look even slightly believable.but
-                                    the majority have suffered alteration in some form,by injected humour</p>
-                                <button class="btn btn-dark btn-rounded mr-1" data-toggle="tooltip" title=""
-                                    data-original-title="Add to cart">
-                                    <i class="fa fa-shopping-cart"></i>
-                                </button>
-                                <h3 class="box-title mt-5">Key Highlights</h3>
-                                <ul class="list-unstyled">
-                                    <li><i class="fa fa-check text-success"></i>Sturdy structure</li>
-                                    <li><i class="fa fa-check text-success"></i>Designed to foster easy portability</li>
-                                    <li><i class="fa fa-check text-success"></i>Perfect furniture to flaunt your
-                                        wonderful collectibles</li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-12 col-md-12 col-sm-12">
-                                <h3 class="box-title mt-5">General Info</h3>
-                                <div class="table-responsive">
-                                    <table class="table table-striped table-product">
-                                        <tbody>
-                                            <tr>
-                                                <td width="390">Brand</td>
-                                                <td>Stellar</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
+                                <p class="description"></p>
+                                <table>
+                                    <tr>
+                                        <td><button class="btn btn-dark btn-rounded mr-1 add-to-cart-button"
+                                                data-toggle="tooltip" title="" data-original-title="Add to cart">
+                                                <i class="fa fa-shopping-cart"></i>
+                                            </button></td>
+                                        <td><span class="price"></span>€</td>
+                                    </tr>
+                                </table>
                             </div>
                         </div>
                     </div>
