--- a/Proyecto 10/html/register.html
+++ b/Proyecto 10/html/register.html
@@ -31,7 +31,7 @@
         <!-- NAV -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a href="/" class="btn navbar-brand shadow-none">Project 10</a>
+                <a href="/" class="btn navbar-brand shadow-none"><img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Illuminati_triangle_eye.png" > illuminati Merlin</img></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +50,8 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <a href="/html/login.html" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
-                        <button class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></button>
+                        <a href="/html/login.html" id="loginButton" class="shadow-none btn mr-1"><i class="bi bi-person-fill"></i></a>
+                        <a href="/html/cart.html" class="shadow-none btn ml-1"><i class="bi bi-cart-fill"></i></a>
                     </div>
                 </div>
             </div>
@@ -73,22 +73,34 @@
                         <form>
                             <div class="loginbox-textbox">
                                 <input type="text" id="name" class="form-control" placeholder="Name">
+                                <div class="invalid-feedback">
+                                    The name need has 3 letters or more.
+                                </div>
                             </div>
                             <div class="loginbox-textbox">
                                 <input type="email" id="email" class="form-control" placeholder="Email">
+                                <div class="invalid-feedback">
+                                    The email need to be a valid email
+                                </div>
                             </div>
                             <div class="loginbox-textbox">
                                 <input type="password" id="password" class="form-control" placeholder="Password">
+                                <div class="invalid-feedback">
+                                    Need contain at least 12 digits with letters, numbers and one symbol.
+                                </div>
                             </div>
                             <div class="loginbox-textbox">
                                 <input type="password" id="repeatPassword" class="form-control"
                                     placeholder="Repeat Password">
+                                <div class="invalid-feedback">
+                                    Dont match the password field.
+                                </div>
                             </div>
                             <div class="loginbox-submit">
                                 <input type="submit" class="btn btn-primary btn-block" value="Register">
                             </div>
                             <div class="loginbox-register">
-                                <a href="/html/login.html" class="btn btn-link text-reset shadow-none">Login</a>
+                                <a href="/html/login.html" id="loginButton" class="btn btn-link text-reset shadow-none">Login</a>
                             </div>
                         </form>
                     </div>
