Añadimos front para visualizar los proyectos

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <ul>
-        <li><a href="Proyecto 1/"></a>Proyecto 1</li>
-        <li><a href="Proyecto 2/"></a>Proyecto 2</li>
-        <li><a href="Proyecto 3/"></a>Proyecto 3</li>
-        <li><a href="Proyecto 4/"></a>Proyecto 4</li>
-        <li><a href="Proyecto 5/"></a>Proyecto 5</li>
-        <li><a href="Proyecto 6/"></a>Proyecto 6</li>
-        <li><a href="Proyecto 7/"></a>Proyecto 7</li>
-        <li><a href="Proyecto 8/"></a>Proyecto 8</li>
-        <li><a href="Proyecto 9/"></a>Proyecto 9</li>
-        <li><a href="Proyecto 10/"></a>Proyecto 10</li>
-        <li><a href="Proyecto 11/"></a>Proyecto 11</li>
+        <li><a href="Proyecto 1/">Proyecto 1</a></li>
+        <li><a href="Proyecto 2/">Proyecto 2</a></li>
+        <li><a href="Proyecto 3/">Proyecto 3</a></li>
+        <li><a href="Proyecto 4/">Proyecto 4</a></li>
+        <li><a href="Proyecto 5/">Proyecto 5</a></li>
+        <li><a href="Proyecto 6/">Proyecto 6</a></li>
+        <li><a href="Proyecto 7/">Proyecto 7</a></li>
+        <li><a href="Proyecto 8/">Proyecto 8</a></li>
+        <li><a href="Proyecto 9/">Proyecto 9</a></li>
+        <li><a href="Proyecto 10/">Proyecto 10</a></li>
+        <li><a href="Proyecto 11/">Proyecto 11</a></li>
     </ul>
 </body>
 </html>
