--- a/Proyecto 9/index.html
+++ b/Proyecto 9/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <ul>
-        <li><a href="Proyecto 3/"></a>Proyecto 3</li>
-        <li><a href="Proyecto 4/"></a>Proyecto 4</li>
-        <li><a href="Proyecto 5/"></a>Proyecto 5</li>
-        <li><a href="Proyecto 6/"></a>Proyecto 6</li>
-        <li><a href="Proyecto 8/"></a>Proyecto 8</li>
+        <li><a href="Proyecto 3/">Proyecto 3</a></li>
+        <li><a href="Proyecto 4/">Proyecto 4</a></li>
+        <li><a href="Proyecto 5/">Proyecto 5</a></li>
+        <li><a href="Proyecto 6/">Proyecto 6</a></li>
+        <li><a href="Proyecto 8/">Proyecto 8</a></li>
     </ul>
 </body>
 </html>
